@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=GParted
-_Comment=Gnome Partition Editor
+_Comment=GNOME Partition Editor
 Exec=gparted
 Icon=gparted.png
 Terminal=false
