@@ -1,3 +1,9 @@
+2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* gparted.desktop.in,
+	  src/Dialog_Progress.cc,
+	  src/Win_GParted.cc: string tweaks. (#328685)
+
 2006-01-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Utils.h,
